--- a/index.html
+++ b/index.html
@@ -27,20 +27,7 @@
 <h2>today,i am enjoying programmig very much</h2> 
 <h1>I want to be a good humam</h1>
 <h1>For this, i am pre-pareing myself very well.</h1>
-<h2>today,i am enjoying programmig very much</h2> 
-<h1>I want to be a good humam</h1>
-<h1>For this, i am pre-pareing myself very well.</h1>
-<h2>today,i am enjoying programmig very much</h2> 
-<h1>I want to be a good humam</h1>
-<h1>For this, i am pre-pareing myself very well.</h1>
-<h2>today,i am enjoying programmig very much</h2> 
-<h1>I want to be a good humam</h1>
-<h1>For this, i am pre-pareing myself very well.</h1>
-<h2>today,i am enjoying programmig very much</h2> 
-<h1>I want to be a good humam</h1>
-<h1>For this, i am pre-pareing myself very well.</h1>
-<h2>today,i am enjoying programmig very much</h2> 
-<h1>I want to be a good humam</h1>
+<p><h1>I love bangladesh.</h1>I love bangladesh</p>
 <h1>For this, i am pre-pareing myself very well.</h1>
 <h2>today,i am enjoying programmig very much</h2> 
 <h1>I want to be a good humam</
