--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Repository</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I want to be a good humam</h1>
@@ -27,7 +28,7 @@
 <h2>today,i am enjoying programmig very much</h2> 
 <h1>I want to be a good humam</h1>
 <h1>For this, i am pre-pareing myself very well.</h1>
-<p><h1>I love bangladesh.</h1>I love bangladesh</p>
+<p>I love bangladesh.I love bangladesh</p>
 <h1>For this, i am pre-pareing myself very well.</h1>
 <h2>today,i am enjoying programmig very much</h2> 
 <h1>I want to be a good humam</
