--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
 <h1>For this, i am pre-pareing myself very well.</h1>
 <h2>today,i am enjoying programmig very much</h2> 
 <h1>I want to be a good humam</h1>
-<h1>For this, i am pre-pareing myself very well.</h1>
-<h2>today,i am enjoying programmig very much</h2> 
-<h1>I want to be a good humam</h1>
+<h1>For this, i am pre-pareing myself very well.</h1>s
 <p>I love bangladesh.I love bangladesh</p>
 <h1>For this, i am pre-pareing myself very well.</h1>
 <h2>today,i am enjoying programmig very much</h2> 
 <h1>I want to be a good humam</
     h1><h1>I want to be a good humam</
         h1><h1>I want to be a good humam</
-            h1><h1>I want to be a good humam</
+            h1><h1>I want to be a good hgg humam</
                 h1><h1>I want to be a good humam</
                     h1>  
 </body>
