--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>First Repository</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body><img src="Screenshot 2022-08-24 132122.png" alt="">
     <h1>I want to be a good humam</h1>
     <h1>For this, i am pre-pareing myself very well.</h1>
     <h2>today,i am enjoying programmig very much</h2> 
