--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body><img src="Screenshot 2022-08-24 132122.png" alt="">
-    <img src="IMG_20200428_104444.jp" alt="">
+    <img src="IMG_20200428_104444.jpg" alt="snake">
     <h1>I want to be a good humam</h1>
     <h1>For this, i am pre-pareing myself very well.</h1>
     <h2>today,i am enjoying programmig very much</h2> 
